// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NamespaceMemberEdit > Dialog closed > Renders the component 1`] = `
"<div class=\\"v-list-item v-list-item--link v-theme--light v-list-item--density-default v-list-item--variant-text\\" tabindex=\\"0\\" member=\\"[object Object]\\" show=\\"false\\" nothasauthorization=\\"false\\"><span class=\\"v-list-item__overlay\\"></span><span class=\\"v-list-item__underlay\\"></span>
  <!---->
  <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
    <!---->
    <!---->
    <div class=\\"d-flex align-center\\">
      <div data-test=\\"namespace-edit-icon\\" class=\\"mr-2\\"><i class=\\"mdi-pencil mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i></div>
      <div class=\\"v-list-item-title\\" data-test=\\"namespace-edit-title\\"> Edit </div>
    </div>
  </div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`NamespaceMemberEdit > Dialog opened > Renders the component 1`] = `
"<div class=\\"v-list-item v-list-item--link v-theme--light v-list-item--density-default v-list-item--variant-text\\" tabindex=\\"0\\" member=\\"[object Object]\\" show=\\"true\\" nothasauthorization=\\"false\\"><span class=\\"v-list-item__overlay\\"></span><span class=\\"v-list-item__underlay\\"></span>
  <!---->
  <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
    <!---->
    <!---->
    <div class=\\"d-flex align-center\\">
      <div data-test=\\"namespace-edit-icon\\" class=\\"mr-2\\"><i class=\\"mdi-pencil mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i></div>
      <div class=\\"v-list-item-title\\" data-test=\\"namespace-edit-title\\"> Edit </div>
    </div>
  </div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;
